default/objects/NVMContactWorld__Log__c/NVMContactWorld__Log__c.object-meta.xml
<CustomObject>
    <description>Container for diagnostic information recorded by a NewVoiceMedia package</description>
    <label>NewVoiceMedia Log</label>
    <nameField>
        <label>NewVoiceMedia Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewVoiceMedia Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>