default/objects/NVMContactWorld__Log__c/fields/NVMContactWorld__Bucket__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Bucket__c</fullName>
    <description>Identifies the group of the exceptions</description>
    <externalId>true</externalId>
    <label>Bucket</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>