default/objects/NVMContactWorld__Log__c/fields/NVMContactWorld__Detail__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Detail__c</fullName>
    <description>Contains the detail of the log</description>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>