default/objects/NVMContactWorld__Log__c/fields/NVMContactWorld__Hash__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Hash__c</fullName>
    <description>Identifies the group of the exceptions</description>
    <externalId>true</externalId>
    <label>Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>