default/objects/NVMContactWorld__Log__c/fields/NVMContactWorld__LoggedBy__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__LoggedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the User who recorded the log</description>
    <label>Logged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NewVoiceMedia_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>