default/objects/NVMContactWorld__Log__c/fields/NVMContactWorld__Reference__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Reference__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique reference that can identify the log</description>
    <externalId>true</externalId>
    <label>Reference</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>